tests/baselines/reference/parserMemberAccessorDeclaration9(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
parserMemberAccessorDeclaration9.ts(2,12): error TS1029: 'public' modifier must precede 'static' modifier.
parserMemberAccessorDeclaration9.ts(2,23): error TS2378: A 'get' accessor must return a value.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== parserMemberAccessorDeclaration9.ts (2 errors) ====
    class C {
        static public get Foo() { }
               ~~~~~~
!!! error TS1029: 'public' modifier must precede 'static' modifier.
                          ~~~
!!! error TS2378: A 'get' accessor must return a value.
    }